--- a/smart.html
+++ b/smart.html
@@ -19,7 +19,7 @@
             <input type="text" id="nombre" name="nombre"><br>
             <label for="url">URL:</label>
             <input type="text" id="url" name="url"><br>
-            <button type="submit">Guardar</button>
+            <button type="submit" onclick="obtenerDatos()">Guardar</button>
         </form>
     </div>
     
